Post-merge fixes to test-classes
Signed-off-by: JoarEliasson <joar.eliasson@gmail.com>